# GBA_template

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake-build-gba-binary.yml  cmake-multi-platform.yml
_build_tools/: launchMGBA.bat  rom_fixer.py
_toolchain/: arm-none-eabi-gcc.cmake
src/: main.c
